# Simulator

./: CMakeLists.txt  LICENSE  Manual.txt  README.md  equations.txt
include/: equations.h  globals.h  menu.h  renderer.h  tables.h
shaders/: compute.comp  compute.comp.spv  tables.glsl  vert.glsl  vert.glsl.spv
src/: equations.cpp  globals.cpp  main.cpp  menu.cpp  renderer.cpp
